--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   <div class='container'>
      <div class='sidebar'>
      <h3> Manhattan Hydrology  </h3>
-     <p>Before colonization and subsequent industrial development,  Manhattan had a rich and complex hydrology. Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
+     <p> Before colonization and subsequent industrial development,  Manhattan had a rich and complex hydrology. </p>
+     <p>The map shows streams that criscrossed Manhattan in the year 1609.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
+     <p> Until recently due to the damage caused by Hurricane Ida in September 2021, people didn't give much thought to how the natural, pre-developement hydrology of the island impacts flooding. </p>
+     <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA, and add on the pre-development shoreline of the island to see how much the original geography of the island impacts where flood hazards are expected today. </p>
+     <!-- <button class= 'button-4' id='fly-to-harlem' role = 'button'> Fly to Harlem </button> -->
 
-     <button class= 'button-4' id='fly-to-harlem' role = 'button'> Fly to Harlem </button>
-
-     <p> Data source: NYC Open Data, Welikia.org  </p>
+<!-- want to link this article https://www.nytimes.com/2021/09/28/opinion/hurricane-ida-new-york-city.html -->
+    <p> Data sources: NYC Open Data, Welikia.org  </p>
 
      </div>
      <div id='mapContainer'>
