--- a/index.html
+++ b/index.html
@@ -5,24 +5,195 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Manhattan Hydrology</title>
+  <title>Water is Cool</title>
 
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- add a favicon which will appear in browser tabs -->
+  <!-- <link rel="shortcut icon" href="./img/favicon.ico"> -->
+
+  <!-- CSS for google fonts, bootstrap, mapboxgl, mapboxgl geocoder, plus local styles-->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+ <link href='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css' rel='stylesheet' />
+ <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" type="text/css">
+ <link rel="stylesheet" href="css/styles.css">
+
 
 </head>
 
 <body>
 
-  <div class='container'>
+<!-- from Chirs' class  7 code -->
+<div id= 'parent-container'>
+
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#33485d;border-bottom: 1px solid #5e5e5e;">
+   <!-- Container wrapper -->
+   <div class="container-fluid">
+
+     <!-- Navbar brand -->
+     <a class="navbar-brand" href="#"><i class="fa-solid fa-droplet"></i> NYC Hydrology</a>
+
+     <!-- Toggle button -->
+     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <i class="fas fa-bars"></i>
+     </button>
+
+     <!-- Collapsible wrapper -->
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <!-- Link -->
+       </ul>
+
+       <!-- Icons (these will show up on the right) -->
+       <ul class="navbar-nav d-flex flex-row me-1">
+         <li class="nav-item">
+           <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">About</a>
+         </li>
+         <li class="nav-item me-3 me-lg-0">
+           <a class="nav-link" href="https://github.com/ren-hh/mhta-hydrology"><i class="fab fa-github"></i></a>
+         </li>
+       </ul>
+
+     </div>
+   </div>
+   <!-- Container wrapper -->
+ </nav>
+ <!-- Navbar -->
+
+  <div class='content-area'>
      <div class='sidebar'>
-     <h3> Manhattan Hydrology  </h3>
-     <p> Before colonization and subsequent industrial development,  Manhattan had a rich and complex hydrology. </p>
-     <p>The map shows streams that criscrossed Manhattan in the year 1609.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
-     <p> Until recently due to the damage caused by Hurricane Ida in September 2021, people didn't give much thought to how the natural, pre-developement hydrology of the island impacts flooding. </p>
-     <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA, and add on the pre-development shoreline of the island to see how much the original geography of the island impacts where flood hazards are expected today. </p>
+     <h3> NYC Water Stories </h3>
+     <p>The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
+     <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today. </p>
      <!-- <button class= 'button-4' id='fly-to-harlem' role = 'button'> Fly to Harlem </button> -->
 
+     <!-- <div class="card text-whote bg-dark mb-3">
+       <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+         <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
+         <a href="#!">
+           <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+         </a>
+       </div>
+       <div class="card-body">
+         <h5 class="card-title">Card title</h5>
+         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+         <a href="#!" class="btn btn-primary">Button</a>
+       </div>
+     </div> -->
+
+
+     <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
+       <div class="accordion-item">
+         <h2 class="accordion-header" id="flush-headingOne">
+           <button
+             class="accordion-button collapsed"
+             type="button"
+             data-mdb-toggle="collapse"
+             data-mdb-target="#flush-collapseOne"
+             aria-expanded="false"
+             aria-controls="flush-collapseOne"
+           >
+             Tibbetts Brook
+           </button>
+         </h2>
+         <div
+           id="flush-collapseOne"
+           class="accordion-collapse collapse"
+           aria-labelledby="flush-headingOne"
+           data-mdb-parent="#accordionFlushExample"
+         >
+           <div class="accordion-body">
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+             heard of them accusamus labore sustainable VHS.
+           </div>
+         </div>
+       </div>
+       <div class="accordion-item">
+         <h2 class="accordion-header" id="flush-headingTwo">
+           <button
+             class="accordion-button collapsed"
+             type="button"
+             data-mdb-toggle="collapse"
+             data-mdb-target="#flush-collapseTwo"
+             aria-expanded="false"
+             aria-controls="flush-collapseTwo"
+           >
+             Accordion Item #2
+           </button>
+         </h2>
+         <div
+           id="flush-collapseTwo"
+           class="accordion-collapse collapse"
+           aria-labelledby="flush-headingTwo"
+           data-mdb-parent="#accordionFlushExample"
+         >
+           <div class="accordion-body">
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+             heard of them accusamus labore sustainable VHS.
+           </div>
+         </div>
+       </div>
+       <div class="accordion-item">
+         <h2 class="accordion-header" id="flush-headingThree">
+           <button
+             class="accordion-button collapsed"
+             type="button"
+             data-mdb-toggle="collapse"
+             data-mdb-target="#flush-collapseThree"
+             aria-expanded="false"
+             aria-controls="flush-collapseThree"
+           >
+             Accordion Item #3
+           </button>
+         </h2>
+         <div
+           id="flush-collapseThree"
+           class="accordion-collapse collapse"
+           aria-labelledby="flush-headingThree"
+           data-mdb-parent="#accordionFlushExample"
+         >
+           <div class="accordion-body">
+             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+             heard of them accusamus labore sustainable VHS.
+           </div>
+         </div>
+       </div>
+     </div> -->
+
+     <h5>Jump to a Story</h5>
+       <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+         <button type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
+         <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus Canal</button>
+         <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Creek</button>
+         <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
+         <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
+       </div>
+       <div class='reset'><small>Back to City View</small></div>
+       <!-- <div class="alert alert-primary" role="alert">
+         <i class="fa-solid fa-circle-info"></i> You could use an alert like this to call attention to a caveat in the data.
+       </div> -->
 <!-- want to link this article https://www.nytimes.com/2021/09/28/opinion/hurricane-ida-new-york-city.html -->
     <p> Data sources: NYC Open Data, Welikia.org  </p>
 
@@ -39,17 +210,47 @@
 
    </div>
 
-   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
-   <script
-   src="https://code.jquery.com/jquery-3.6.0.min.js"
+   <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">About this Project</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Here we can add plenty of info about the data, methodology, design inspiration, the issue at hand, or anything else.</p>
+            <p>You could also show this modal when the page first loads, as a splash screen of sorts.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+   <!-- Add layer toggle -->
+
+   <nav id="menu"></nav>
+
+</div>
+
+<!-- Bring in java script -->
+ <script src="https://kit.fontawesome.com/3a3d8feff0.js" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+ <script src='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js'></script>
+ <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js"></script>
+
+ <!-- <script src=
+ "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
+     </script> -->
+
+ <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
    crossorigin="anonymous"></script>
    <script src="js/scripts.js"></script>
-
-<!-- Add layer toggle -->
-
-<nav id="menu"></nav>
-
 
 </body>
 
