added markers, clicking markers changes sidebar

--- a/index.html
+++ b/index.html
@@ -66,138 +66,147 @@
 
   <div class='content-area'>
      <div class='sidebar'>
-     <h3> NYC Water Stories </h3>
-     <p>The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
-     <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today. </p>
-     <!-- <button class= 'button-4' id='fly-to-harlem' role = 'button'> Fly to Harlem </button> -->
-
-     <!-- <div class="card text-whote bg-dark mb-3">
-       <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-         <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
-         <a href="#!">
-           <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-         </a>
-       </div>
-       <div class="card-body">
-         <h5 class="card-title">Card title</h5>
-         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-         <a href="#!" class="btn btn-primary">Button</a>
-       </div>
-     </div> -->
+       <div class='sidebar-top'>
+         <h3> NYC Water Stories </h3>
+         <p>The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
+         <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today. </p>
 
 
-     <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
-       <div class="accordion-item">
-         <h2 class="accordion-header" id="flush-headingOne">
-           <button
-             class="accordion-button collapsed"
-             type="button"
-             data-mdb-toggle="collapse"
-             data-mdb-target="#flush-collapseOne"
-             aria-expanded="false"
-             aria-controls="flush-collapseOne"
-           >
-             Tibbetts Brook
-           </button>
-         </h2>
-         <div
-           id="flush-collapseOne"
-           class="accordion-collapse collapse"
-           aria-labelledby="flush-headingOne"
-           data-mdb-parent="#accordionFlushExample"
-         >
-           <div class="accordion-body">
-             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-             heard of them accusamus labore sustainable VHS.
+         <!-- <div class="card text-whote bg-dark mb-3">
+           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
+             <a href="#!">
+               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+             </a>
            </div>
-         </div>
-       </div>
-       <div class="accordion-item">
-         <h2 class="accordion-header" id="flush-headingTwo">
-           <button
-             class="accordion-button collapsed"
-             type="button"
-             data-mdb-toggle="collapse"
-             data-mdb-target="#flush-collapseTwo"
-             aria-expanded="false"
-             aria-controls="flush-collapseTwo"
-           >
-             Accordion Item #2
-           </button>
-         </h2>
-         <div
-           id="flush-collapseTwo"
-           class="accordion-collapse collapse"
-           aria-labelledby="flush-headingTwo"
-           data-mdb-parent="#accordionFlushExample"
-         >
-           <div class="accordion-body">
-             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-             heard of them accusamus labore sustainable VHS.
+           <div class="card-body">
+             <h5 class="card-title">Card title</h5>
+             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <a href="#!" class="btn btn-primary">Button</a>
            </div>
-         </div>
-       </div>
-       <div class="accordion-item">
-         <h2 class="accordion-header" id="flush-headingThree">
-           <button
-             class="accordion-button collapsed"
-             type="button"
-             data-mdb-toggle="collapse"
-             data-mdb-target="#flush-collapseThree"
-             aria-expanded="false"
-             aria-controls="flush-collapseThree"
-           >
-             Accordion Item #3
-           </button>
-         </h2>
-         <div
-           id="flush-collapseThree"
-           class="accordion-collapse collapse"
-           aria-labelledby="flush-headingThree"
-           data-mdb-parent="#accordionFlushExample"
-         >
-           <div class="accordion-body">
-             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-             richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-             brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-             sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-             et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-             sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-             craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-             heard of them accusamus labore sustainable VHS.
-           </div>
-         </div>
-       </div>
-     </div> -->
+         </div> -->
 
-     <h5>Jump to a Story</h5>
-       <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-         <button type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
-         <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus Canal</button>
-         <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Creek</button>
-         <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
-         <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
-       </div>
-       <div class='reset'><small>Back to City View</small></div>
+
+         <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
+           <div class="accordion-item">
+             <h2 class="accordion-header" id="flush-headingOne">
+               <button
+                 class="accordion-button collapsed"
+                 type="button"
+                 data-mdb-toggle="collapse"
+                 data-mdb-target="#flush-collapseOne"
+                 aria-expanded="false"
+                 aria-controls="flush-collapseOne"
+               >
+                 Tibbetts Brook
+               </button>
+             </h2>
+             <div
+               id="flush-collapseOne"
+               class="accordion-collapse collapse"
+               aria-labelledby="flush-headingOne"
+               data-mdb-parent="#accordionFlushExample"
+             >
+               <div class="accordion-body">
+                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                 heard of them accusamus labore sustainable VHS.
+               </div>
+             </div>
+           </div>
+           <div class="accordion-item">
+             <h2 class="accordion-header" id="flush-headingTwo">
+               <button
+                 class="accordion-button collapsed"
+                 type="button"
+                 data-mdb-toggle="collapse"
+                 data-mdb-target="#flush-collapseTwo"
+                 aria-expanded="false"
+                 aria-controls="flush-collapseTwo"
+               >
+                 Accordion Item #2
+               </button>
+             </h2>
+             <div
+               id="flush-collapseTwo"
+               class="accordion-collapse collapse"
+               aria-labelledby="flush-headingTwo"
+               data-mdb-parent="#accordionFlushExample"
+             >
+               <div class="accordion-body">
+                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                 heard of them accusamus labore sustainable VHS.
+               </div>
+             </div>
+           </div>
+           <div class="accordion-item">
+             <h2 class="accordion-header" id="flush-headingThree">
+               <button
+                 class="accordion-button collapsed"
+                 type="button"
+                 data-mdb-toggle="collapse"
+                 data-mdb-target="#flush-collapseThree"
+                 aria-expanded="false"
+                 aria-controls="flush-collapseThree"
+               >
+                 Accordion Item #3
+               </button>
+             </h2>
+             <div
+               id="flush-collapseThree"
+               class="accordion-collapse collapse"
+               aria-labelledby="flush-headingThree"
+               data-mdb-parent="#accordionFlushExample"
+             >
+               <div class="accordion-body">
+                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
+                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
+                 heard of them accusamus labore sustainable VHS.
+               </div>
+             </div>
+           </div>
+         </div> -->
+
+          <h5>Jump to a Story</h5>
+          <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+             <button type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
+             <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus Canal</button>
+             <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Creek</button>
+             <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
+             <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
+          </div>
+        </div>
+
+        <div class='sidebar-bottom'>
+          <div class="reset">
+            <button type="button" class="btn btn-outline-primary">Back to City View</button>
+          </div>
+        </div>
+
        <!-- <div class="alert alert-primary" role="alert">
          <i class="fa-solid fa-circle-info"></i> You could use an alert like this to call attention to a caveat in the data.
        </div> -->
 <!-- want to link this article https://www.nytimes.com/2021/09/28/opinion/hurricane-ida-new-york-city.html -->
-    <p> Data sources: NYC Open Data, Welikia.org  </p>
+    <p> <small> Data sources: NYC Open Data, Welikia.org </small>  </p>
 
-     </div>
+  </div>
+
      <div id='mapContainer'>
      <!-- this is where mapboxGL will insert the map -->
      </div>
