added some markers

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
      <div class='sidebar'>
        <div class='sidebar-top'>
          <h3> NYC Water Stories </h3>
-         <p>The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</p>
-         <p> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today. </p>
+         <p> <small> The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</small> </p>
+         <p> <small> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
 
 
          <!-- <div class="card text-whote bg-dark mb-3">
@@ -190,20 +190,22 @@
              <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Creek</button>
              <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
              <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
+
           </div>
         </div>
 
         <div class='sidebar-bottom'>
-          <div class="reset">
-            <button type="button" class="btn btn-outline-primary">Back to City View</button>
-          </div>
+
+            <button type="button" class="reset btn btn-outline-primary">Back to City View</button>
+            <p> <small> Data sources: NYC Open Data, Welikia.org </small>  </p>
         </div>
+
 
        <!-- <div class="alert alert-primary" role="alert">
          <i class="fa-solid fa-circle-info"></i> You could use an alert like this to call attention to a caveat in the data.
        </div> -->
 <!-- want to link this article https://www.nytimes.com/2021/09/28/opinion/hurricane-ida-new-york-city.html -->
-    <p> <small> Data sources: NYC Open Data, Welikia.org </small>  </p>
+
 
   </div>
 
