--- a/index.html
+++ b/index.html
@@ -67,132 +67,38 @@
   <div class='content-area'>
      <div class='sidebar'>
        <div class='sidebar-top'>
-         <h3> NYC Water Stories </h3>
-         <p> <small> The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</small> </p>
-         <p> <small> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
+         <div id='default-sidebar-content'>
+           <h3> NYC Water Stories </h3>
+           <p> <small> The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</small> </p>
+           <p> <small> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
 
+           <div class='btn-area'>
+            <h5>Jump to a Story</h5>
+            <p></p>
+            <div class="btn-group" role="group" aria-label="Vertical button group">
+               <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus </button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
+               <!-- <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button> -->
+            </div>
+              <br>
+              <br>
+            <div class="btn-group" role="group" aria-label="Vertical button group">
+               <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Newtown Creek</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Collect Pond </button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Broad Street</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-eastside">Montayne's Rivulet</button>
+               <!-- <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button> -->
+            </div>
 
-         <!-- <div class="card text-whote bg-dark mb-3">
-           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp" class="img-fluid"/>
-             <a href="#!">
-               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-             </a>
-           </div>
-           <div class="card-body">
-             <h5 class="card-title">Card title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="#!" class="btn btn-primary">Button</a>
-           </div>
-         </div> -->
-
-
-         <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
-           <div class="accordion-item">
-             <h2 class="accordion-header" id="flush-headingOne">
-               <button
-                 class="accordion-button collapsed"
-                 type="button"
-                 data-mdb-toggle="collapse"
-                 data-mdb-target="#flush-collapseOne"
-                 aria-expanded="false"
-                 aria-controls="flush-collapseOne"
-               >
-                 Tibbetts Brook
-               </button>
-             </h2>
-             <div
-               id="flush-collapseOne"
-               class="accordion-collapse collapse"
-               aria-labelledby="flush-headingOne"
-               data-mdb-parent="#accordionFlushExample"
-             >
-               <div class="accordion-body">
-                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-                 heard of them accusamus labore sustainable VHS.
-               </div>
-             </div>
-           </div>
-           <div class="accordion-item">
-             <h2 class="accordion-header" id="flush-headingTwo">
-               <button
-                 class="accordion-button collapsed"
-                 type="button"
-                 data-mdb-toggle="collapse"
-                 data-mdb-target="#flush-collapseTwo"
-                 aria-expanded="false"
-                 aria-controls="flush-collapseTwo"
-               >
-                 Accordion Item #2
-               </button>
-             </h2>
-             <div
-               id="flush-collapseTwo"
-               class="accordion-collapse collapse"
-               aria-labelledby="flush-headingTwo"
-               data-mdb-parent="#accordionFlushExample"
-             >
-               <div class="accordion-body">
-                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-                 heard of them accusamus labore sustainable VHS.
-               </div>
-             </div>
-           </div>
-           <div class="accordion-item">
-             <h2 class="accordion-header" id="flush-headingThree">
-               <button
-                 class="accordion-button collapsed"
-                 type="button"
-                 data-mdb-toggle="collapse"
-                 data-mdb-target="#flush-collapseThree"
-                 aria-expanded="false"
-                 aria-controls="flush-collapseThree"
-               >
-                 Accordion Item #3
-               </button>
-             </h2>
-             <div
-               id="flush-collapseThree"
-               class="accordion-collapse collapse"
-               aria-labelledby="flush-headingThree"
-               data-mdb-parent="#accordionFlushExample"
-             >
-               <div class="accordion-body">
-                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                 richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-                 brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-                 sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-                 et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                 sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                 craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-                 heard of them accusamus labore sustainable VHS.
-               </div>
-             </div>
-           </div>
-         </div> -->
-
-          <h5>Jump to a Story</h5>
-          <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-             <button type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
-             <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus Canal</button>
-             <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Creek</button>
-             <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
-             <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
 
           </div>
         </div>
+        <div id='variable-sidebar-content'>
+          <p></p>
+        </div>
+      </div>
 
         <div class='sidebar-bottom'>
 
