--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
        <div class='sidebar-top'>
          <div id='default-sidebar-content'>
            <h3> NYC Water Stories </h3>
-           <p> <small> The map shows streams that criscrossed Manhattan in the year 1609 along with the shoreline at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings.</small> </p>
-           <p> <small> Toggle the layers for the 100 year and 500 year flood maps developed by FEMA to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
+           <p> <small> The map shows <strong> streams </strong> that criscrossed Manhattan in the year 1609 along with the <strong> shoreline </strong>  at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings. </small> </p>
+           <p> <small> <strong> Toggle </strong>  the layers for the 100 year and 500 year flood maps developed to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
+           <p> <small> <strong> Click </strong> the buttons or markers on the map to learn about a particlar stream.</small> </p>
 
            <div class='btn-area'>
             <h5>Jump to a Story</h5>
@@ -80,23 +81,106 @@
                <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus </button>
                <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
                <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
-               <!-- <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button> -->
             </div>
-              <br>
-              <br>
+
             <div class="btn-group" role="group" aria-label="Vertical button group">
-               <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Newtown Creek</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Collect Pond </button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Broad Street</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-eastside">Montayne's Rivulet</button>
-               <!-- <button type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button> -->
+               <button <type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-collect">Collect Pond </button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-broad">Broad Street</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-montayne">Montayne's Rivulet</button>
             </div>
 
 
           </div>
         </div>
         <div id='variable-sidebar-content'>
-          <p></p>
+          <div id='card-area'>
+            <div class="card text-whote bg-dark mb-3">
+               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+
+                           <!-- Carousel wrapper -->
+                           <!--source: https://mdbootstrap.com/docs/standard/components/carousel/ -->
+                     <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
+                     <!-- Indicators -->
+                     <div class="carousel-indicators">
+                     <button
+                       type="button"
+                       data-mdb-target="#carouselBasicExample"
+                       data-mdb-slide-to="0"
+                       class="active"
+                       aria-current="true"
+                       aria-label="Slide 1"
+                     ></button>
+                     <button
+                       type="button"
+                       data-mdb-target="#carouselBasicExample"
+                       data-mdb-slide-to="1"
+                       aria-label="Slide 2"
+                     ></button>
+                     <button
+                       type="button"
+                       data-mdb-target="#carouselBasicExample"
+                       data-mdb-slide-to="2"
+                       aria-label="Slide 3"
+                     ></button>
+                     </div>
+
+                     <!-- Inner -->
+                     <div class="carousel-inner">
+                     <!-- Single item -->
+                     <div class="carousel-item active">
+                     <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Canyon at Nigh"/>
+                       <div class="carousel-caption d-none d-md-block">
+                         <h5>First slide label</h5>
+                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                       </div>
+                     </div>
+
+                     <!-- Single item -->
+                     <div class="carousel-item">
+
+                       <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Canyon at Nigh"/>
+                       <div class="carousel-caption d-none d-md-block">
+                         <h5>Second slide label</h5>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                       </div>
+                     </div>
+
+                     <!-- Single item -->
+                     <div class="carousel-item">
+                       <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
+                       <div class="carousel-caption d-none d-md-block">
+                         <h5>Third slide label</h5>
+                         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                       </div>
+                     </div>
+                     </div>
+                     <!-- Inner -->
+
+                     <!-- Controls -->
+                     <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="prev">
+                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="next">
+                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                     <span class="visually-hidden">Next</span>
+                     </button>
+                     </div>
+                     <!-- Carousel wrapper -->
+
+
+                   <a href="#!">
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                   </a>
+               </div>
+               <div class="card-body">
+                 <h5 class="card-title">${name}</h5>
+                 <p class="card-text">${desc}</p>
+                 <p class="card-text"> ${link} </p>
+               </div>
+            </div>
+          </div>
         </div>
       </div>
 
