added styling to sidebar text

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
        <div class='sidebar-top'>
          <div id='default-sidebar-content'>
            <h3> NYC Water Stories </h3>
-           <p> <small> The map shows <strong> streams </strong> that criscrossed Manhattan in the year 1609 along with the <strong> shoreline </strong>  at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings. </small> </p>
-           <p> <small> <strong> Toggle </strong>  the layers for the 100 year and 500 year flood maps developed to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
-           <p> <small> <strong> Click </strong> the buttons or markers on the map to learn about a particlar stream.</small> </p>
+           <p> <small> The map shows  <span class='highlight'> streams </span> that criscrossed parts of New York City in the year 1609 along with the  <span class='highlight'> shoreline </span>  at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings. </small> </p>
+           <p> <small>  <span class='highlight'> Toggle </span>  the layers for the 100 year and 500 year  FEMA <span class='highlight'> flood </span> maps  to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
+           <p> <small> <span class='highlight'> Click </span> the buttons or markers on the map to learn about a particlar stream, its history, and how it continues to impact the lives of New Yorkers today. Some stories have additional features that you can hover over to get more information. </small> </p>
 
            <div class='btn-area'>
-            <h5>Jump to a Story</h5>
+            <!-- <h5>Jump to a Story</h5> -->
             <p></p>
             <div class="btn-group" role="group" aria-label="Vertical button group">
                <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
