buttons now work. populated newtown story.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p></p>
             <div class="btn-group" role="group" aria-label="Vertical button group">
                <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-gowanus">Gowanus </button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-maiden"> Maiden Lane </button>
                <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
                <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
             </div>
@@ -107,13 +107,14 @@
                               <!-- <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
                             </div>
                             <div class="carousel-inner">
-
                                 <div class="carousel-item active">
                                   <div id="item1">
                                     <img src= "..." class="d-block w-100" alt="...">
 
                                   </div>
-                                  <div class="carousel-caption carousel-caption-padding-y d-none d-md-block">
+
+                                  <!-- <div class="carousel-caption carousel-caption-padding-y d-none d-md-block"> -->
+                                  <div class = " carousel-caption carousel-caption-padding-y">
                                       <h5>Then</h5>
                                   </div>
                                 </div>
@@ -123,7 +124,7 @@
                                   <img src= "..." class="d-block w-100" alt="...">
 
                                 </div>
-                                <div class="carousel-caption carousel-caption-padding-y d-none d-md-block">
+                                <div class="carousel-caption carousel-caption-padding-y">
                                     <h5>Now</h5>
                                 </div>
                               </div>
