--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Water is Cool</title>
+  <title> Lost Waters </title>
 
   <!-- add a favicon which will appear in browser tabs -->
-  <!-- <link rel="shortcut icon" href="./img/favicon.ico"> -->
+  <link rel="shortcut icon" href="./images/favicon.ico">
 
   <!-- CSS for google fonts, bootstrap, mapboxgl, mapboxgl geocoder, plus local styles-->
  <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
    <div class="container-fluid">
 
      <!-- Navbar brand -->
-     <a class="navbar-brand" href="#"><i class="fa-solid fa-droplet"></i> NYC Hydrology</a>
+     <div class="navbar-brand" href="#"><i class="fa-solid fa-droplet"></i> Lost Waters </div>
 
      <!-- Toggle button -->
      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">About</a>
          </li>
          <li class="nav-item me-3 me-lg-0">
-           <a class="nav-link" href="https://github.com/ren-hh/mhta-hydrology"><i class="fab fa-github"></i></a>
+           <a class="nav-link" href="https://github.com/ren-hh/mhta-hydrology"  target='_blank' rel='noopener noreferrer' ><i class="fab fa-github"></i></a>
          </li>
        </ul>
 
@@ -68,10 +68,10 @@
      <div class='sidebar'>
        <div class='sidebar-top'>
          <div id='default-sidebar-content'>
-           <h3> NYC Water Stories </h3>
+           <h3> Lost Waters of NYC</h3>
            <p> <small> The map shows  <span class='highlight'> streams </span> that criscrossed parts of New York City in the year 1609 along with the  <span class='highlight'> shoreline </span>  at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings. </small> </p>
            <p> <small>  <span class='highlight'> Toggle </span>  the layers for the 100 year and 500 year  FEMA <span class='highlight'> flood </span> maps  to see how much the original geography of the island impacts where flood hazards are expected today.</small> </p>
-           <p> <small> <span class='highlight'> Click </span> the buttons or markers on the map to learn about a particlar stream, its history, and how it continues to impact the lives of New Yorkers today. Some stories have additional features that you can hover over to get more information. </small> </p>
+           <p> <small> <span class='highlight'> Click </span> the buttons or markers on the map to learn about a particular stream, its history, and how it continues to impact the lives of New Yorkers today. Some stories have additional features that you can hover over to get more information. </small> </p>
 
            <div class='btn-area'>
             <!-- <h5>Jump to a Story</h5> -->
@@ -80,7 +80,7 @@
                <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
                <button type="button" class="btn btn-outline-primary flyto flyto-maiden"> Maiden Lane </button>
                <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-eastside">East River Park</button>
+               <button type="button" class="btn btn-outline-primary flyto flyto-east">East River Park</button>
             </div>
 
             <div class="btn-group" role="group" aria-label="Vertical button group">
