--- a/index.html
+++ b/index.html
@@ -70,31 +70,38 @@
          <div id='default-sidebar-content'>
            <h3> Ghost Waters of NYC</h3>
            <p> <small> The map shows  <span class='highlight'> streams </span> that criscrossed parts of New York City in the year 1609 along with the  <span class='highlight'> shoreline </span>  at the time.  Though most creeks and streams are no longer visible on the surface, many continue to course through subway tunnels, basements, and deep under streets and buildings. </small> </p>
-           <p> <small>  <span class='highlight'> Toggle </span>  the layers for the 100 year and 500 year  FEMA <span class='highlight'> flood </span> maps  to see how much the original geography of the island impacts where flood hazards are expected today. <a href= "https://www.massivecert.com/blog/fema-100-year-flood-zone-explained" target='_blank' rel='noopener noreferrer' > Click here </a>  for a simple explanation of what 100 year and 500 year floodplain means. </small> </p>
+           <p> <small>  <span class='highlight'> Toggle </span>  the layers for the 100 year and 500 year  FEMA <span class='highlight'> flood </span> maps  to see how much the original geography of the island impacts where flood hazards are expected today. <a href= "https://www.massivecert.com/blog/fema-100-year-flood-zone-explained" target='_blank' rel='noopener noreferrer' > Learn</a>  about what 100 year and 500 year floodplain means. </small> </p>
            <p> <small> <span class='highlight'> Click </span> the buttons or markers on the map to learn about a particular stream, its history, and how it continues to impact the lives of New Yorkers today. Some stories have additional features that you can hover over to get more information. </small> </p>
 
            <div class='btn-area'>
             <!-- <h5>Jump to a Story</h5> -->
             <p></p>
-            <div class="btn-group" role="group" aria-label="Vertical button group">
+            <h4>Bronx</h4>
+            <div class="btn-group" role="group" aria-label="button group">
                <button <type="button" class="btn btn-outline-primary flyto flyto-tibbetts">Tibbetts Brook</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-maiden"> Maiden Lane </button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-east">East River Park</button>
-            </div>
-
-            <div class="btn-group" role="group" aria-label="Vertical button group">
-               <button <type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-collect">Collect Pond </button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-broad">Broad Street</button>
-               <button type="button" class="btn btn-outline-primary flyto flyto-montayne">Montayne's Rivulet</button>
-            </div>
-
-            <div class="btn-group" role="group" aria-label="Vertical button group">
-               <button <type="button" class="btn btn-outline-primary flyto flyto-west">32 W 76th St.</button>
                <button type="button" class="btn btn-outline-primary flyto flyto-brook">Mill Brook </button>
+             </div>
+
+            <h4>Manhattan</h4>
+            <div class="btn-group" role="group" aria-label="button group">
+              <button type="button" class="btn btn-outline-primary flyto flyto-maiden"> Maiden Lane </button>
+              <button type="button" class="btn btn-outline-primary flyto flyto-minetta">Minetta Brook</button>
+              <button type="button" class="btn btn-outline-primary flyto flyto-east">East River Park</button>
+              <button type="button" class="btn btn-outline-primary flyto flyto-collect">Collect Pond </button>
+            </div>
+            <div class="btn-group" role="group" aria-label="button group">
+              <button type="button" class="btn btn-outline-primary flyto flyto-broad">Broad Street</button>
+              <button type="button" class="btn btn-outline-primary flyto flyto-montayne">Montayne's Rivulet</button>
                <button type="button" class="btn btn-outline-primary flyto flyto-tiemann"> Tiemann's Fountain </button>
                <button type="button" class="btn btn-outline-primary flyto flyto-sunfish"> Sunfish Creek </button>
+            </div>
+            <div class="btn-group" role="group" aria-label="button group">
+              <button <type="button" class="btn btn-outline-primary flyto flyto-west">32 W 76th St.</button>
+            </div>
+            <h4>Queens</h4>
+            <div class="btn-group" role="group" aria-label="button group">
+              <button <type="button" class="btn btn-outline-primary flyto flyto-newtown">Newtown Creek</button>
+
 
             </div>
 
@@ -180,12 +187,6 @@
      <div id='mapContainer'>
      <!-- this is where mapboxGL will insert the map -->
      </div>
-
-     <!-- <div class="map-overlay" id="legend"> -->
-       <!-- This is where the legend space is created -->
-       <!-- Tutorial used for legend: https://docs.mapbox.com/help/tutorials/choropleth-studio-gl-pt-2/#add-a-legend -->
-       <!-- <strong> Legend </strong>
-     </div> -->
 
    </div>
 
